2003-04-19  Steve Fosdick  <fozzy@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Fixed a bug where
	the index data was not being correctly retreived including
	updating the get_oracle_index_data to take the name of the table
	owner for which it is to find index data.

2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* Improved support for types and fixed bug which caused the Null?
	column to always show "Yes" regardless of whether nulls were
	actually allowed.
	
2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider - changed error handling -
	gda_oracle_check_result is now a macro rather than a function and
	therefore has access to the compiler __FILE__ and __LINE__ macros
	which are then included as part of the source or the error message.

2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Fixed a bug in
	gda_oracle_provider_get_schema - previously a number of calls were
	made to the function get_oracle_objects which normally returns a
	GDA data model but which could return NULL, then an attempt was
	made to set of the first column of the retruned data model without
	checking for NULL.  Now the title is set within get_oracle_objects
	which does check for NULL.
	
2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Removed debugging
	messages and added local variable declaration for Emacs to help
	keep to the coding style.
	
2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Fixed the
	handling of usernames and password so that if the
	username/password supplied at connection time is blank and so
	is the username/password obtained from the DSN the provider will
	try to connect to Oracle with a blank username/password rather
	than crash from trying to dereference a NULL pointer.
	
2003-04-16  Rodrigo Moya <rodrigo@gnome-db.org>
